--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,48 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
+*{
+    box-sizing:border-box; /*if we set any height or weight it will count with margin and padding  */
+    margin:0;
+     padding: 0;
+}
+
 body{
     font-family: "Merriweather", serif;
+}
+/* banner style */
+.banner-container{
+    max-width:1320px;
+    /* border: 2px solid red; */
+    min-height: 600px;
+    margin:0 auto;
+    margin-top:20px;
+    background-image: url("../resources/Banner\ Image.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;/* it will take full size of bg  */
+    background-color: rgba(0,0,0,0.5);
+    background-blend-mode: overlay;
+
+}
+.banner-content p,h1{
+    color:rgb(255, 255, 255);
+
+}
+.banner-content{
+    display:flex;
+   flex-direction: column;
+   justify-content: center; 
+   height: 600px;
+   align-items: center;
+}
+.banner-content p{
+    font-size: 32px;
+font-weight: 400;
+line-height: 95px;
+letter-spacing: 0%;
+}
+.banner-content h1{
+    font-size: 72px;
+font-weight: 900;
+line-height: 95px;
+letter-spacing: 0%;
 }
