--- a/styles/style.css
+++ b/styles/style.css
@@ -1,15 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 *{
     box-sizing:border-box; /*if we set any height or weight it will count with margin and padding  */
     margin:0;
      padding: 0;
 }
 
-body{
+/* body{
     font-family: "Merriweather", serif;
-}
+} */
 /* banner style */
 .banner-container{
+    font-family: "Merriweather", serif;
     max-width:1320px;
     /* border: 2px solid red; */
     min-height: 600px;
@@ -48,10 +50,42 @@ letter-spacing: 0%;
 }
 /* 65% styles starts from here */
 .second-section-container {
+
 width: 802.9px;
 height: 806px;
 border:2px solid red;
-display:flex;
+/* display:flex; */
 margin: 0px auto;
-margin-top: 92px;
+margin-top: 90px;
+}
+.second-section-content {
+    display:flex;
+    flex-direction: column;
+    justify-content: center; 
+    align-items: center;
+   
+}
+.second-section-content h1 {
+    color: rgb(255, 0, 0);
+    font-family: Inter;
+    font-size: 88px;
+    font-weight: 700;
+}
+.second-section-content p{
+    color: rgb(255, 0, 0);
+font-family: Inter;
+font-size: 24px;
+font-weight: 500;
+}
+.second-section-content h3{
+    color: rgb(7, 2, 17);
+font-family: Inter;
+font-size: 48px;
+font-weight: 700;
+}
+.second-sec-img{
+    width: 800px;
+height: 400px;
+margin:0 auto;
+margin-top:24px;
 }
